# octoglow

./: .gitignore  .gitmodules  LICENSE  README.md
firmware/avr-display-driver/: .gitignore  CMakeLists.txt  protocol-specification.md
firmware/avr-display-driver/font/: to_lcd_file.py
firmware/avr-display-driver/libsrc/: i2c-slave.cpp
firmware/avr-display-driver/src/: Font5x7.cpp  Font5x7.hpp  display-lowlevel.cpp  display-lowlevel.hpp  display.cpp  display.hpp  encoder.cpp  encoder.hpp  main.cpp  protocol.hpp  speaker.hpp  vfd.cpp  vfd.hpp
firmware/clock-display/: CMakeLists.txt  README.md  burn.sh  read-weather.py
firmware/clock-display/src/: display.cpp  display.hpp  i2c-slave.cpp  i2c-slave.hpp  light-sensor.cpp  light-sensor.hpp  main.cpp  protocol.hpp  receiver433.cpp  receiver433.hpp  relay.cpp  relay.hpp
firmware/front-display/: .gitignore  CMakeLists.txt  README.md  burn.sh
firmware/front-display/avr/: CMakeLists.txt  display_hd.cpp  eeprom_hd.cpp  encoder_hd.cpp  i2c-slave.cpp  i2c-slave.hpp  i2c-slave_hd.cpp  main.cpp  main.hpp
firmware/front-display/font/: font.lcd  original5x7.lcd
firmware/front-display/libsrc/: i2c-slave.hpp
firmware/front-display/noarch/: Font5x7.cpp  Font5x7.hpp  display.cpp  display.hpp  eeprom.hpp  encoder.cpp  encoder.hpp  i2c-slave.cpp  i2c-slave.hpp  protocol.hpp
firmware/front-display/src/: display-lowlevel.hpp  display.hpp  main.cpp  protocol.hpp  speaker.cpp
firmware/front-display/test/: CMakeLists.txt  display_test.cpp  i2c-slave_test.cpp  main.hpp
firmware/geiger/: .gitignore  CMakeLists.txt  README.md  burn.sh  enable-eye.py  set-brightness.py
firmware/geiger-board/: .gitignore  CMakeLists.txt  README.md
firmware/geiger-board/animationtest/: CMakeLists.txt
firmware/geiger-board/hardware/: CMakeLists.txt  geiger-counter_hd.cpp  i2c-slave_hd.cpp  inverter_hd.cpp  magiceye_hd.cpp  main.cpp
firmware/geiger-board/libsrc/: animation.cpp  geiger-counter.cpp  geiger-counter.hpp  i2c-slave.cpp  i2c-slave.hpp  inverter.cpp  inverter.hpp  magiceye.cpp  magiceye.hpp  protocol.hpp
firmware/geiger-board/src/: inverter.cpp  inverter.hpp  magiceye.cpp  magiceye.hpp  main.cpp  main.hpp
firmware/geiger-board/test/: CMakeLists.txt  common.hpp  i2c-slave_test.cpp  inverter_test.cpp  magiceye_test.cpp
firmware/geiger/animationtest/: CMakeLists.txt  main.cpp
firmware/geiger/msp430/: CMakeLists.txt  geiger-counter_hd.cpp  i2c-slave_hd.cpp  inverter_hd.cpp  magiceye_hd.cpp  main.cpp
firmware/geiger/noarch/: FastPID.cpp  FastPID.hpp  animation.cpp  animation.hpp  geiger-counter.cpp  geiger-counter.hpp  i2c-slave.cpp  i2c-slave.hpp  inverter.cpp  inverter.hpp  magiceye.cpp  magiceye.hpp  main.hpp  protocol.hpp
firmware/geiger/test/: CMakeLists.txt  common.hpp  i2c-slave_test.cpp  inverter_test.cpp  magiceye_test.cpp
firmware/vfd-display-clock/: .gitignore  CMakeLists.txt
firmware/vfd-display-clock/src/: display.cpp  display.hpp  global.hpp  i2c-slave.cpp  i2c-slave.hpp  i2c-usi-slave.cpp  i2c-usi-slave.hpp  main.cpp  protocol.hpp  receiver433.cpp  receiver433.hpp  relay.hpp  vfd.cpp  vfd.hpp
pcb/: .gitignore  (+7 more)
software/octoglowd/: .gitignore  Cargo.toml  README.md  build.gradle  build.gradle.kts  config.yml  deploy.sh  jar-with-dependencies-with-exclude-files.xml  migrations.sql  pom.xml  run.sh  settings.gradle  settings.gradle.kts
software/octoglowd/gradle/: libs.versions.toml
software/octoglowd/gradle/wrapper/: gradle-wrapper.properties
software/octoglowd/migrations/2018-05-16-222635_add_weather_reports/: down.sql  up.sql
software/octoglowd/src/: database.rs  error.rs  i2c.rs  main.rs  message.rs  schema.rs  timer.rs  views.rs
software/octoglowd/src/i2cbus/: mod.rs  system.rs
software/octoglowd/src/main/java/eu/slomkowski/octoglow/octoglowd/: Main.kt
software/octoglowd/src/main/kotlin/eu/slomkowski/octoglow/octoglowd/: ConfKey.kt  DataSnapshotBus.kt  Database.kt  DatabaseKeys.kt  HistoricalValuesEvents.kt  Main.kt  MqttEmiter.kt  RadmonOrgSender.kt  StateMachine.kt  Utils.kt  commands.kt  config.kt  dataSampleDefinitions.kt  eventBuses.kt  main.kt  measurementValues.kt  serializers.kt  utils.kt
software/octoglowd/src/main/kotlin/eu/slomkowski/octoglow/octoglowd/calendar/: countryHolidays.kt  nameDays.kt
software/octoglowd/src/main/kotlin/eu/slomkowski/octoglow/octoglowd/daemon/: AnalogGaugeDaemon.kt  AnalogGaugeDemon.kt  BrightnessDaemon.kt  BrightnessDemon.kt  CpuUsageIndicatorDaemon.kt  Daemon.kt  FrontDisplayDaemon.kt  FrontDisplayDemon.kt  FrontDisplayDemon2.kt  PollingDemon.kt  RealTimeClockDaemon.kt  RealTimeClockDemon.kt
software/octoglowd/src/main/kotlin/eu/slomkowski/octoglow/octoglowd/datacollectors/: AirQualityDataCollector.kt  (+8 more)
software/octoglowd/src/main/kotlin/org/softpark/stateful4k/: StateMachine.kt
software/octoglowd/src/main/kotlin/org/softpark/stateful4k/action/: EventExecutor.kt  Executor.kt  StateExecutor.kt
software/octoglowd/src/main/kotlin/org/softpark/stateful4k/config/: Configurator.kt  IConfigurator.kt
software/octoglowd/src/main/kotlin/org/softpark/stateful4k/extensions/: Extensions.kt
software/octoglowd/src/main/resources/: logback.xml  tinylog.properties
software/octoglowd/src/main/resources/name-day/: PL.csv
software/octoglowd/src/test/kotlin/eu/slomkowski/octoglow/octoglowd/: AirQualityInstantSerializerTest.kt  ApplicationConfigTest.kt  DataSampleTypeTest.kt  DatabaseTest.kt  HistoricalValueTypeTest.kt  MeasurementTypeTest.kt  MqttDemonTest.kt  MqttEmiterTest.kt  SerializersTest.kt  StateMachineTest.kt  TestParamResolver.kt  UtilsTest.kt  YamlDeserializationTest.kt  testConfig.kt
software/octoglowd/src/test/resources/: garbage-collection-kolegiacki-17.html  logback-test.xml
software/octoglowd/src/test/resources/ping-output/: 2.txt
software/octoglowd/src/test/resources/proc-net-wireless/: 3.txt
software/octoglowd/src/test/resources/proc-stat/: 1.txt  2.txt
software/octoglowd/src/test/resources/simplemonitor-json/: 1.json
software/octoglowd/src/views/: clock.rs  geiger.rs  mod.rs  weather_inside.rs  weather_inside_view.rs  weather_outside.rs
(+353 files in other folders)
