[package]
name = "octoglowd"
version = "0.1.0"
authors = ["Michał Słomkowski <m.slomkowski@gmail.com>"]

[dependencies]
futures-await="0.1"
i2cdev = "0.4.0"
chrono = "0.4"
image = "0.19"
byteorder = "1.2"
log = "0.4"
simplelog = "0.5"
rusqlite = {version = "0.13.0", features = ["chrono", "bundled"]}
config = "0.7"
num-traits="0.2"
